@@ -23,6 +23,7 @@ public class CanvasSimulationService {
     private PlayerPositionDTO currentCarrier;
     private BallPositionDTO ball;
     private int possessionTicks = 0;
+    private int spacePassCooldown = 0;
 
     public void startCanvasTestSimulation() {
 
@@ -33,7 +34,7 @@ public class CanvasSimulationService {
         for (int i = 12; i <= 22; i++) players.add(new PlayerPositionDTO(i, "AWAY", 65 + random.nextDouble() * 30, 10 + random.nextDouble() * 80));
 
         ball = new BallPositionDTO(50, 50);
-        currentCarrier = players.get(0);
+        currentCarrier = players.getFirst();
 
         final int[] tick = {0};
         final int totalTicks = MATCH_DURATION_SECONDS * (1000 / TICK_MS);
@@ -52,6 +53,12 @@ public class CanvasSimulationService {
                 PlayerPositionDTO next = findNearbyTeammate(currentCarrier, players);
                 if (next != null) currentCarrier = next;
                 possessionTicks = 0;
+            }
+
+            spacePassCooldown++;
+            if (spacePassCooldown > 7 && random.nextDouble() < 0.16) {
+                trySpacePass(currentCarrier, players, random);
+                spacePassCooldown = 0;
             }
 
             tryFinishAttack(currentCarrier, players, random);
@@ -80,15 +87,15 @@ public class CanvasSimulationService {
         else if (id == 7 || id == 11 || id == 19 || id == 20) moveWinger(p, players, random, attacksRight);
         else if (id == 9 || id == 10 || id == 21 || id == 22) moveStriker(p, players, random, attacksRight);
 
-        avoidCrowding(p, players, random);      // ← jača razdaljina
-        applyIdleMovement(p, random);           // ← stalno kretanje
+        avoidCrowding(p, players, random);
+        applyIdleMovement(p, random);
     }
 
     // ================== GOLMANI ==================
     private void moveGoalkeeper(PlayerPositionDTO gk, Random random, boolean attacksRight) {
         double goalX = attacksRight ? 6 : 94;
-        gk.setX(clamp(goalX + (random.nextDouble() - 0.5) * 6));
-        gk.setY(clamp(48 + (random.nextDouble() - 0.5) * 14));
+        gk.setX(clamp(goalX + (random.nextDouble() - 0.5) * 5));
+        gk.setY(clamp(48 + (random.nextDouble() - 0.5) * 12));
     }
 
     // ================== BEKOVI ==================
@@ -100,21 +107,16 @@ public class CanvasSimulationService {
 
         PlayerPositionDTO target = findTargetOpponent(fb, players, random, attacksRight);
 
-        double dx = target != null ? target.getX() - fb.getX() : (attacksRight ? 6 : -6);
+        double dx = target != null ? target.getX() - fb.getX() : (attacksRight ? 5 : -5);
         double dy = preferredY - fb.getY();
 
-        if (target != null) {
-            double targetDy = target.getY() - fb.getY();
-            if (Math.abs(target.getY() - preferredY) < 30) dy = targetDy * 0.55 + dy * 0.45;
-        }
-
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.6) {
-            double speed = 0.95 + random.nextDouble() * 0.5;
+        if (dist > 0.4) {
+            double speed = 0.75 + random.nextDouble() * 0.35;
             double newX = fb.getX() + (dx / dist) * speed;
             double newY = fb.getY() + (dy / dist) * speed;
 
-            newY = Math.max(preferredY - 20, Math.min(preferredY + 20, newY));
+            newY = Math.max(preferredY - 18, Math.min(preferredY + 18, newY));
             newX = Math.max(minX, Math.min(maxX, newX));
 
             fb.setX(clamp(newX));
@@ -122,12 +124,10 @@ public class CanvasSimulationService {
         }
     }
 
-    // ================== ŠTOPERI (razdvojeni) ==================
+    // ================== ŠTOPERI ==================
     private void moveCenterBack(PlayerPositionDTO cb, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
         double minX = attacksRight ? 18 : 62;
         double maxX = attacksRight ? 38 : 82;
-
-        // Levi štoper malo levo, desni malo desno
         double preferredY = (cb.getId() == 4 || cb.getId() == 14) ? 42 : 58;
 
         PlayerPositionDTO target = findTargetOpponent(cb, players, random, attacksRight);
@@ -136,8 +136,8 @@ public class CanvasSimulationService {
         double dy = preferredY - cb.getY();
 
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.6) {
-            double speed = 0.75 + random.nextDouble() * 0.4;
+        if (dist > 0.4) {
+            double speed = 0.7 + random.nextDouble() * 0.3;
             double newX = cb.getX() + (dx / dist) * speed;
             double newY = cb.getY() + (dy / dist) * speed;
 
@@ -150,115 +150,207 @@ public class CanvasSimulationService {
 
     // ================== CENTRALNI VEZNI ==================
     private void moveCentralMidfielder(PlayerPositionDTO cm, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
-        double minX = attacksRight ? 38 : 52;
-        double maxX = attacksRight ? 78 : 92;
-
         PlayerPositionDTO target = findTargetOpponent(cm, players, random, attacksRight);
 
         double dx = target != null ? target.getX() - cm.getX() : (attacksRight ? 10 : -10);
-        double dy = (50 - cm.getY()) * 0.8;
+        double dy = (50 - cm.getY()) * 0.75;
 
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.6) {
-            double speed = 1.05 + random.nextDouble() * 0.6;
+        if (dist > 0.4) {
+            double speed = 0.95 + random.nextDouble() * 0.45;
             double newX = cm.getX() + (dx / dist) * speed;
-            newX = Math.max(minX, Math.min(maxX, newX));
+            newX = Math.max(attacksRight ? 38 : 52, Math.min(attacksRight ? 78 : 92, newX));
 
             cm.setX(clamp(newX));
             cm.setY(clamp(cm.getY() + (dy / dist) * speed));
         }
     }
 
-    // ================== KRILA ==================
+    // ================== KRILA (energično) ==================
     private void moveWinger(PlayerPositionDTO winger, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
+        double offsideLine = findOffsideLine(players, attacksRight);
+        double maxForward = attacksRight ? offsideLine + 12 + random.nextDouble() * 10 : offsideLine - 12 - random.nextDouble() * 10;
+
+        if (attacksRight && winger.getX() > offsideLine + 15) {
+            winger.setX(clamp(winger.getX() - 0.6));
+            return;
+        }
+        if (!attacksRight && winger.getX() < offsideLine - 15) {
+            winger.setX(clamp(winger.getX() + 0.6));
+            return;
+        }
+
         PlayerPositionDTO target = findTargetOpponent(winger, players, random, attacksRight);
 
-        double dx = target != null ? target.getX() - winger.getX() : (attacksRight ? 15 : -15);
-        double dy = target != null ? target.getY() - winger.getY() : (50 - winger.getY()) * 0.5;
+        double dx = target != null ? target.getX() - winger.getX() : (attacksRight ? 20 : -20);
+        double dy = target != null ? target.getY() - winger.getY() : (50 - winger.getY()) * 0.4;
+
+        // KONSTANTNO VUČENJE NAPRED
+        dx += attacksRight ? 1.7 : -1.7;
 
         double dist = Math.hypot(dx, dy);
-        if (dist > 0.6) {
-            double speed = 1.3 + random.nextDouble() * 0.7;
-            winger.setX(clamp(winger.getX() + (dx / dist) * speed));
+        if (dist > 0.4) {
+            double speed = 1.25 + random.nextDouble() * 0.55;
+            double newX = winger.getX() + (dx / dist) * speed;
+            newX = attacksRight ? Math.min(newX, maxForward) : Math.max(newX, maxForward);
+
+            winger.setX(clamp(newX));
             winger.setY(clamp(winger.getY() + (dy / dist) * speed));
         }
     }
 
-    // ================== NAPADAČI (polako napred) ==================
-    private void moveStriker(PlayerPositionDTO striker, List<PlayerPositionDTO> players, Random random, boolean attacksRight) {
-        double offsideLine = findOffsideLine(players, attacksRight);
-        double maxForward = attacksRight ? offsideLine + 8 + random.nextDouble() * 12 : offsideLine - 8 - random.nextDouble() * 12;
+    // ================== NAPADAČI (glavni napadački pokretač) ==================
+    private void moveStriker(PlayerPositionDTO striker,
+                             List<PlayerPositionDTO> players,
+                             Random random,
+                             boolean attacksRight) {
 
-        double baseTargetX = attacksRight ? 62 + random.nextDouble() * 38 : 38 - random.nextDouble() * 38;
-        double baseTargetY = 32 + random.nextDouble() * 36;
+        // GOAL target
+        double goalX = attacksRight ? 100 : 0;
+        double goalY = 50;
 
-        // nearby threat
-        PlayerPositionDTO nearbyThreat = null;
-        double threatDist = Double.MAX_VALUE;
-        String opponentTeam = attacksRight ? "AWAY" : "HOME";
+        // konstantno vučenje ka golu
+        double forwardPush = attacksRight ? 1.8 : -1.8;
 
-        for (PlayerPositionDTO p : players) {
-            if (!p.getTeam().equals(opponentTeam)) continue;
-            double d = distance(striker, p);
-            boolean isDangerous = currentCarrier.equals(p) || (attacksRight ? p.getX() > 74 : p.getX() < 26);
-            if (isDangerous && d < threatDist && d < 21) {
-                threatDist = d;
-                nearbyThreat = p;
-            }
-        }
+        double dx = (goalX - striker.getX()) + forwardPush;
+        double dy = (goalY - striker.getY()) * 0.6;
 
-        double targetX = nearbyThreat != null ? nearbyThreat.getX() + (random.nextDouble() - 0.5) * 8 : baseTargetX;
-        double targetY = nearbyThreat != null ? nearbyThreat.getY() + (random.nextDouble() - 0.5) * 8 : baseTargetY;
-
-        // POLAKO NAPRED kad nema pretnje
-        if (nearbyThreat == null) {
-            targetX += attacksRight ? 0.9 : -0.9;
-        }
-
-        double dx = targetX - striker.getX();
-        double dy = targetY - striker.getY();
         double dist = Math.hypot(dx, dy);
 
-        if (dist > 0.6) {
-            double speed = 1.35 + random.nextDouble() * 0.75;
+        if (dist > 0.01) {
+
+            double speed = 1.2 + random.nextDouble() * 0.4;
+
             double newX = striker.getX() + (dx / dist) * speed;
-            newX = attacksRight ? Math.min(newX, maxForward) : Math.max(newX, maxForward);
+            double newY = striker.getY() + (dy / dist) * speed;
 
             striker.setX(clamp(newX));
-            striker.setY(clamp(striker.getY() + (dy / dist) * speed));
+            striker.setY(clamp(newY));
         }
     }
 
     // =============================================
-    // POMOĆNE FUNKCIJE
+    // PAS U PROSTOR + ŠUT
     // =============================================
+    private void trySpacePass(PlayerPositionDTO carrier, List<PlayerPositionDTO> players, Random random) {
+        boolean attacksRight = carrier.getTeam().equals("HOME");
+        double spaceX = attacksRight ? 82 + random.nextDouble() * 14 : 18 - random.nextDouble() * 14;
+        double spaceY = 28 + random.nextDouble() * 44;
+
+        PlayerPositionDTO receiver = players.stream()
+                .filter(p -> p.getTeam().equals(carrier.getTeam()) && p.getId() != carrier.getId())
+                .min(Comparator.comparingDouble(p -> Math.hypot(p.getX() - spaceX, p.getY() - spaceY)))
+                .orElse(null);
+
+        if (receiver != null) {
+            currentCarrier = receiver;
+            ball.setX(clamp(spaceX));
+            ball.setY(clamp(spaceY));
+        }
+    }
+
+    private void tryFinishAttack(PlayerPositionDTO carrier,
+                                 List<PlayerPositionDTO> players,
+                                 Random random) {
+
+        if (carrier == null) return;
+
+        boolean attacksRight = carrier.getTeam().equals("HOME");
+
+        double goalX = attacksRight ? 100 : 0;
+        double goalY = 50;
+
+        double distanceToGoal = Math.abs(goalX - carrier.getX());
+
+        // zona šuta
+        double shootZone = 22;
+
+        if (distanceToGoal < shootZone) {
+
+            // što je bliže golu → veća šansa
+            double shootChance = 0.25 + (shootZone - distanceToGoal) / shootZone * 0.5;
+
+            if (random.nextDouble() < shootChance) {
+
+                // ----- SMOOTH KRETANJE LOPTE KA GOLU -----
+                double dx = goalX - carrier.getX();
+                double dy = goalY - carrier.getY();
+                double dist = Math.hypot(dx, dy);
+
+                if (dist > 0.01) {
+                    double shotSpeed = 4.0;
+
+                    ball.setX(clamp(carrier.getX() + (dx / dist) * shotSpeed));
+                    ball.setY(clamp(carrier.getY() + (dy / dist) * shotSpeed));
+                }
+
+                // kada lopta pređe 98% terena → posed dobija protivnik
+                if ((attacksRight && ball.getX() > 98) ||
+                        (!attacksRight && ball.getX() < 2)) {
+
+                    PlayerPositionDTO newCarrier = players.stream()
+                            .filter(p -> !p.getTeam().equals(carrier.getTeam()))
+                            .min(Comparator.comparingDouble(p -> distance(ball, p)))
+                            .orElse(null);
+
+                    currentCarrier = newCarrier;
+                }
+
+                return;
+            }
+        }
+
+        // ako je previše blizu aut linije → vrati pas
+        double nearGoalLine = attacksRight ? 96 : 4;
+
+        if ((attacksRight && carrier.getX() > nearGoalLine) ||
+                (!attacksRight && carrier.getX() < nearGoalLine)) {
+
+            if (random.nextDouble() < 0.45) {
+                PlayerPositionDTO back = findBackwardTeammate(carrier, players);
+                if (back != null) {
+                    currentCarrier = back;
+                }
+            }
+        }
+    }
+
+    // =============================================
+    // OSTALO
+    // =============================================
+
+    private void pullTowardsBall(PlayerPositionDTO p, Random random) {
+        double toBallX = (ball.getX() - p.getX()) * 0.22;
+        double toBallY = (ball.getY() - p.getY()) * 0.26;
+        p.setX(clamp(p.getX() + toBallX));
+        p.setY(clamp(p.getY() + toBallY));
+    }
+
+    private void avoidCrowding(PlayerPositionDTO p, List<PlayerPositionDTO> players, Random random) {
+        for (PlayerPositionDTO other : players) {
+            if (other.getId() == p.getId() || !other.getTeam().equals(p.getTeam())) continue;
+            double dist = distance(p, other);
+            if (dist < 10.0) {
+                double dx = p.getX() - other.getX();
+                double dy = p.getY() - other.getY();
+                double len = Math.hypot(dx, dy) + 0.001;
+                p.setX(clamp(p.getX() + (dx / len) * (11.5 - dist)));
+                p.setY(clamp(p.getY() + (dy / len) * (11.5 - dist)));
+            }
+        }
+    }
+
+    private void applyIdleMovement(PlayerPositionDTO p, Random random) {
+        // samo blago vertikalno pomeranje
+        p.setY(clamp(p.getY() + (random.nextDouble() - 0.5) * 0.6));
+    }
+
 
     private double findOffsideLine(List<PlayerPositionDTO> players, boolean attacksRight) {
         return players.stream()
                 .filter(p -> p.getTeam().equals(attacksRight ? "AWAY" : "HOME"))
                 .mapToDouble(PlayerPositionDTO::getX)
                 .reduce(attacksRight ? 0 : 100, attacksRight ? Math::max : Math::min);
-    }
-
-    private void avoidCrowding(PlayerPositionDTO p, List<PlayerPositionDTO> players, Random random) {
-        for (PlayerPositionDTO other : players) {
-            if (other.getId() == p.getId() || !other.getTeam().equals(p.getTeam())) continue;
-
-            double dist = distance(p, other);
-            if (dist < 9.5) {                                 // ← povećano
-                double dx = p.getX() - other.getX();
-                double dy = p.getY() - other.getY();
-                double len = Math.hypot(dx, dy) + 0.001;
-
-                p.setX(clamp(p.getX() + (dx / len) * (10.0 - dist)));   // jače odguravanje
-                p.setY(clamp(p.getY() + (dy / len) * (10.0 - dist)));
-            }
-        }
-    }
-
-    private void applyIdleMovement(PlayerPositionDTO p, Random random) {
-        p.setY(clamp(p.getY() + (random.nextDouble() - 0.5) * 1.6));   // jače gore-dole
-        p.setX(clamp(p.getX() + (50 - p.getX()) * 0.09));             // lagano ka centru
     }
 
     private PlayerPositionDTO findTargetOpponent(PlayerPositionDTO player, List<PlayerPositionDTO> allPlayers,
@@ -268,14 +360,14 @@ public class CanvasSimulationService {
                 .filter(p -> p.getTeam().equals(opponentTeam))
                 .sorted(Comparator.comparingDouble(p -> distance(player, p)))
                 .limit(3)
-                .collect(Collectors.toList());
+                .toList();
 
         if (candidates.isEmpty()) return null;
-        if (candidates.size() == 1) return candidates.get(0);
+        if (candidates.size() == 1) return candidates.getFirst();
 
         PlayerPositionDTO mostDangerous = candidates.stream()
                 .max(Comparator.comparingDouble(p -> attacksRight ? p.getX() : (100 - p.getX())))
-                .orElse(candidates.get(0));
+                .orElse(candidates.getFirst());
 
         return random.nextDouble() < 0.68 ? mostDangerous : candidates.get(random.nextInt(candidates.size()));
     }
@@ -285,22 +377,10 @@ public class CanvasSimulationService {
                 .filter(p -> p.getId() != carrier.getId() && p.getTeam().equals(carrier.getTeam()))
                 .sorted(Comparator.comparingDouble(p -> distance(carrier, p)))
                 .limit(4)
-                .collect(Collectors.toList());
+                .toList();
 
         if (candidates.isEmpty()) return null;
         return candidates.get(new Random().nextInt(candidates.size()));
-    }
-
-    private void tryFinishAttack(PlayerPositionDTO carrier, List<PlayerPositionDTO> players, Random random) {
-        boolean attacksRight = carrier.getTeam().equals("HOME");
-        double goalLine = attacksRight ? 92 : 8;
-
-        if (Math.abs(carrier.getX() - goalLine) < 14) {
-            if (random.nextDouble() < 0.42) {
-                PlayerPositionDTO back = findBackwardTeammate(carrier, players);
-                if (back != null) currentCarrier = back;
-            }
-        }
     }
 
     private PlayerPositionDTO findBackwardTeammate(PlayerPositionDTO carrier, List<PlayerPositionDTO> players) {
@@ -317,7 +397,9 @@ public class CanvasSimulationService {
     private double distance(PlayerPositionDTO a, PlayerPositionDTO b) {
         return Math.hypot(a.getX() - b.getX(), a.getY() - b.getY());
     }
-
+    private double distance(BallPositionDTO ball, PlayerPositionDTO player) {
+        return Math.hypot(ball.getX() - player.getX(), ball.getY() - player.getY());
+    }
     private double clamp(double val) {
         return Math.max(0, Math.min(100, val));
     }
